[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/SpaceStation/Main/CompleteLightsOn.png" type="Texture" id=1]
[ext_resource path="res://Assets/SpaceStation/Main/stage1.png" type="Texture" id=2]
[ext_resource path="res://Assets/SpaceStation/Main/stage2.png" type="Texture" id=3]
[ext_resource path="res://Assets/SpaceStation/Main/stage3.png" type="Texture" id=4]
[ext_resource path="res://Assets/SpaceStation/Main/stage4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Particles/corona.png" type="Texture" id=6]
[ext_resource path="res://Assets/SpaceStation/SpaceStation.gd" type="Script" id=7]
[ext_resource path="res://Assets/SpaceStation/Main/stage5.png" type="Texture" id=8]
[ext_resource path="res://Assets/SpaceStation/Main/stage6.png" type="Texture" id=9]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.488889, 1 )
colors = PoolColorArray( 1, 0.686275, 0.278431, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.56
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
color_ramp = SubResource( 2 )

[node name="SpaceStation" type="Node2D"]
position = Vector2( 440, 464 )
scale = Vector2( 0.223, 0.223 )
script = ExtResource( 7 )

[node name="Stages" type="Node2D" parent="."]

[node name="s7" type="Sprite" parent="Stages"]
visible = false
texture = ExtResource( 1 )

[node name="HitBox" type="Area2D" parent="Stages/s7" groups=[
"hit",
]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Stages/s7/HitBox"]
polygon = PoolVector2Array( -3.43823, 755.313, 278.48, 725.779, 490.589, 637.177, 592.617, 513.67, 608.726, 301.56, 444.945, 132.41, 514.754, 81.396, 541.603, -68.9602, 498.644, -192.467, 310.699, -302.549, 439.576, -380.412, 450.315, -541.508, 364.397, -667.7, 98.5892, -742.878, 18.0413, -769.727, -113.52, -729.453, -347.109, -667.7, -443.767, -560.302, -449.137, -407.261, -322.945, -283.755, -510.89, -162.933, -532.37, 14.2729, -467.931, 140.465, -596.808, 282.766, -607.548, 446.547, -532.37, 591.533, -317.575, 717.724 )

[node name="s6" type="Sprite" parent="Stages"]
visible = false
position = Vector2( 6.03052, 0.634644 )
texture = ExtResource( 9 )

[node name="positions" type="Node2D" parent="Stages/s6"]

[node name="s1-1" type="Position2D" parent="Stages/s6/positions"]
position = Vector2( -244.51, -575.687 )

[node name="s1-2" type="Position2D" parent="Stages/s6/positions"]
position = Vector2( 380.863, -403.53 )

[node name="s1-3" type="Position2D" parent="Stages/s6/positions"]
position = Vector2( 464.902, 59.4904 )

[node name="s1-4" type="Position2D" parent="Stages/s6/positions"]
position = Vector2( -557.452, 475.216 )

[node name="s1-5" type="Position2D" parent="Stages/s6/positions"]
position = Vector2( -268.745, -152.785 )

[node name="s1-6" type="Position2D" parent="Stages/s6/positions"]
position = Vector2( 558.942, 454.824 )

[node name="s1-7" type="Position2D" parent="Stages/s6/positions"]
position = Vector2( -352.471, 646.197 )

[node name="s1-8" type="Position2D" parent="Stages/s6/positions"]
position = Vector2( -515.138, 12.2744 )

[node name="s1-9" type="Position2D" parent="Stages/s6/positions"]
position = Vector2( 281.451, -124.079 )

[node name="s1-10" type="Position2D" parent="Stages/s6/positions"]
position = Vector2( 255.138, 660.55 )

[node name="s1-11" type="Position2D" parent="Stages/s6/positions"]
position = Vector2( -285.49, -293.922 )

[node name="s1-12" type="Position2D" parent="Stages/s6/positions"]
position = Vector2( 224.039, -545.099 )

[node name="s1-13" type="Position2D" parent="Stages/s6/positions"]
position = Vector2( -77.3726, 244.314 )

[node name="s1-14" type="Position2D" parent="Stages/s6/positions"]
position = Vector2( 322.118, 131.882 )

[node name="s1-15" type="Position2D" parent="Stages/s6/positions"]
position = Vector2( 128.353, 418.942 )

[node name="HitBox" type="Area2D" parent="Stages/s6" groups=[
"hit",
]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Stages/s6/HitBox"]
polygon = PoolVector2Array( 22.7504, 751.994, 342.257, 698.295, 532.887, 529.144, 618.805, 467.391, 570.477, 209.638, 420.12, 112.98, 532.887, 43.1721, 535.572, -128.664, 412.065, -246.801, 280.504, -321.979, 449.655, -405.212, 449.655, -566.307, 377.161, -646.855, 95.2437, -722.033, 9.32581, -759.622, -103.441, -719.348, -382.674, -638.8, -441.743, -504.554, -409.523, -351.513, -315.551, -300.499, -449.797, -209.211, -541.085, -74.9647, -506.181, 96.8708, -447.113, 158.624, -562.564, 247.227, -618.948, 411.008, -522.291, 612.378, -277.962, 719.775 )

[node name="s5" type="Sprite" parent="Stages"]
visible = false
position = Vector2( -26.7042, -42.1725 )
texture = ExtResource( 8 )

[node name="positions" type="Node2D" parent="Stages/s5"]

[node name="s1-1" type="Position2D" parent="Stages/s5/positions"]
position = Vector2( 260.235, -520.667 )

[node name="s1-2" type="Position2D" parent="Stages/s5/positions"]
position = Vector2( -195.647, -556.628 )

[node name="s1-3" type="Position2D" parent="Stages/s5/positions"]
position = Vector2( -329.294, -340 )

[node name="s1-4" type="Position2D" parent="Stages/s5/positions"]
position = Vector2( -239.294, -98.902 )

[node name="s1-5" type="Position2D" parent="Stages/s5/positions"]
position = Vector2( 365.177, -59.4904 )

[node name="s1-6" type="Position2D" parent="Stages/s5/positions"]
position = Vector2( -443.373, 119.922 )

[node name="s1-7" type="Position2D" parent="Stages/s5/positions"]
position = Vector2( -397.922, 619.883 )

[node name="s1-8" type="Position2D" parent="Stages/s5/positions"]
position = Vector2( 87.6863, -643.177 )

[node name="s1-9" type="Position2D" parent="Stages/s5/positions"]
position = Vector2( 520.667, 258.667 )

[node name="s1-10" type="Position2D" parent="Stages/s5/positions"]
position = Vector2( 317.334, 289.765 )

[node name="s1-11" type="Position2D" parent="Stages/s5/positions"]
position = Vector2( -285.49, 284.981 )

[node name="s1-12" type="Position2D" parent="Stages/s5/positions"]
position = Vector2( -82.157, 543.334 )

[node name="s1-13" type="Position2D" parent="Stages/s5/positions"]
position = Vector2( 49.4117, -277.177 )

[node name="s1-14" type="Position2D" parent="Stages/s5/positions"]
position = Vector2( 63.7648, 210.824 )

[node name="HitBox" type="Area2D" parent="Stages/s5" groups=[
"hit",
]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Stages/s5/HitBox"]
polygon = PoolVector2Array( 174.309, 611.454, 179.934, 399.581, 367.433, 339.581, 489.307, 504.58, 571.806, 513.955, 562.431, 227.082, 388.058, 138.958, 161.184, 84.5828, 157.434, -72.916, 301.808, -46.6663, 416.182, 62.083, 478.057, 60.208, 442.432, -217.29, 148.059, -294.164, 148.059, -431.038, 241.809, -447.913, 371.183, -339.164, 423.682, -348.539, 378.682, -622.287, 179.934, -680.412, 59.9344, -710.411, -9.44006, -704.786, -41.3149, -680.412, -253.188, -642.912, -380.688, -547.287, -423.812, -427.288, -382.563, -320.414, -1.94006, -320.414, -31.9398, -292.289, -309.438, -236.04, -485.687, -121.665, -504.437, 2.08386, -476.312, 120.208, -399.438, 180.208, -519.437, 270.207, -585.061, 412.706, -530.687, 558.955, -331.938, 710.829, -395.688, 577.705, -391.938, 414.581, -266.313, 332.081, -116.315, 380.831, -127.564, 602.08, 161.184, 622.705 )

[node name="s4" type="Sprite" parent="Stages"]
visible = false
position = Vector2( -119.872, -96.0621 )
texture = ExtResource( 5 )

[node name="positions" type="Node2D" parent="Stages/s4"]

[node name="s1-1" type="Position2D" parent="Stages/s4/positions"]
position = Vector2( 220.57, -600.816 )

[node name="s1-2" type="Position2D" parent="Stages/s4/positions"]
position = Vector2( -275.814, -341.23 )

[node name="s1-3" type="Position2D" parent="Stages/s4/positions"]
position = Vector2( -102.621, -507.875 )

[node name="s1-4" type="Position2D" parent="Stages/s4/positions"]
position = Vector2( -132.21, -172.69 )

[node name="s1-5" type="Position2D" parent="Stages/s4/positions"]
position = Vector2( -320.768, 94.4767 )

[node name="s1-6" type="Position2D" parent="Stages/s4/positions"]
position = Vector2( 117.404, 265.746 )

[node name="s1-7" type="Position2D" parent="Stages/s4/positions"]
position = Vector2( 405.882, 287.255 )

[node name="s1-8" type="Position2D" parent="Stages/s4/positions"]
position = Vector2( -348.079, 397.216 )

[node name="s1-9" type="Position2D" parent="Stages/s4/positions"]
position = Vector2( -162.628, 228.627 )

[node name="s1-10" type="Position2D" parent="Stages/s4/positions"]
position = Vector2( 152.314, -200 )

[node name="HitBox" type="Area2D" parent="Stages/s4" groups=[
"hit",
]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Stages/s4/HitBox"]
polygon = PoolVector2Array( 226.986, 651.735, 256.002, 347.061, 441.709, 355.766, 473.627, 228.093, 437.356, 191.822, 253.101, 142.494, 240.043, -138.967, 422.848, -76.5814, 438.807, -170.885, 347.405, -189.746, 237.142, -211.509, 225.535, -478.461, 395.282, -472.658, 392.38, -591.626, 157.346, -624.995, 154.444, -658.364, 68.8455, -651.11, 49.9847, -623.544, -116.861, -598.88, -256.14, -526.339, -321.428, -453.797, -318.526, -333.378, -270.649, -295.657, -163.287, -384.157, 100.764, -410.272, 103.665, -260.837, 64.493, -252.132, 57.2389, -69.3273, -84.9427, -214.41, -260.493, -156.377, -375.109, -63.5238, -411.379, 38.0343, -396.871, 96.0675, -314.174, 186.019, -270.649, 223.741, -411.379, 313.692, -479.568, 428.307, -453.453, 496.496, -330.133, 519.71, -259.042, 444.266, -163.287, 384.782, -24.0078, 442.816, -0.794556, 616.915 )

[node name="s3" type="Sprite" parent="Stages"]
visible = false
position = Vector2( -231.213, -177.651 )
texture = ExtResource( 4 )

[node name="positions" type="Node2D" parent="Stages/s3"]

[node name="s1-1" type="Position2D" parent="Stages/s3/positions"]
position = Vector2( -247.865, 537.562 )

[node name="s1-2" type="Position2D" parent="Stages/s3/positions"]
position = Vector2( -97.1758, 330.46 )

[node name="s1-3" type="Position2D" parent="Stages/s3/positions"]
position = Vector2( 277.973, 263.029 )

[node name="s1-4" type="Position2D" parent="Stages/s3/positions"]
position = Vector2( -9.15173, -504.024 )

[node name="s1-5" type="Position2D" parent="Stages/s3/positions"]
position = Vector2( 257.176, -487.892 )

[node name="s1-6" type="Position2D" parent="Stages/s3/positions"]
position = Vector2( -179.335, -308.234 )

[node name="s1-7" type="Position2D" parent="Stages/s3/positions"]
position = Vector2( -82.3152, -92.726 )

[node name="s1-8" type="Position2D" parent="Stages/s3/positions"]
position = Vector2( 277.721, -94.885 )

[node name="s1-9" type="Position2D" parent="Stages/s3/positions"]
position = Vector2( -232, 152 )

[node name="s1-10" type="Position2D" parent="Stages/s3/positions"]
position = Vector2( -208, 8 )

[node name="HitBox" type="Area2D" parent="Stages/s3" groups=[
"hit",
]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Stages/s3/HitBox"]
polygon = PoolVector2Array( -349.17, 557.724, -326.262, 415.696, -158.271, 299.63, 14.3008, 240.069, 173.129, 224.797, 167.02, -106.602, 185.346, -169.217, 218.944, -181.434, 223.526, -506.726, 327.374, -509.78, 359.445, 32.3721, 298.358, 30.8448, 336.537, 264.505, 293.776, 369.881, 270.869, 351.554, 264.76, 319.483, 206.727, 330.174, 194.509, 420.278, 138.003, 430.968, 108.986, 317.956, -63.5858, 359.19, -40.678, 397.37, -257.539, 569.942 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Stages/s3/HitBox"]
polygon = PoolVector2Array( -226.627, 227.389, -165.989, 135.951, -216.04, 76.2749, -173.689, 23.3369, -151.552, -15.1635, -134.226, -52.7014, -69.7383, -82.5392, -70.7006, -100.827, -175.614, -53.6639, -268.978, 27.187, -290.153, 101.3, -288.228, 183.114 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Stages/s3/HitBox"]
polygon = PoolVector2Array( -155.401, -210.553, -126.526, -254.829, -174.652, -290.442, -132.301, -334.717, -135.189, -355.892, -161.177, -395.355, -114.014, -397.28, -62.038, -365.517, 142.014, -457.918, 138.164, -478.131, 10.1501, -461.768, 20.7377, -485.831, -0.437378, -517.594, -122.676, -468.506, -183.314, -412.68, -210.265, -360.705, -209.302, -278.891, -200.64, -247.129 )

[node name="s2" type="Sprite" parent="Stages"]
visible = false
position = Vector2( -156.12, -244.252 )
texture = ExtResource( 3 )

[node name="positions" type="Node2D" parent="Stages/s2"]

[node name="s1-1" type="Position2D" parent="Stages/s2/positions"]
position = Vector2( 70.0481, 482.977 )

[node name="s1-2" type="Position2D" parent="Stages/s2/positions"]
position = Vector2( 53.1593, 382.397 )

[node name="s1-3" type="Position2D" parent="Stages/s2/positions"]
position = Vector2( 209.411, 339.054 )

[node name="s1-4" type="Position2D" parent="Stages/s2/positions"]
position = Vector2( -233.43, -185.14 )

[node name="s1-5" type="Position2D" parent="Stages/s2/positions"]
position = Vector2( -219.073, -329.701 )

[node name="s1-6" type="Position2D" parent="Stages/s2/positions"]
position = Vector2( -92.7341, -384.406 )

[node name="s1-7" type="Position2D" parent="Stages/s2/positions"]
position = Vector2( 262.377, -54.1068 )

[node name="s1-8" type="Position2D" parent="Stages/s2/positions"]
position = Vector2( 161.971, -419.943 )

[node name="s1-9" type="Position2D" parent="Stages/s2/positions"]
position = Vector2( 55.1501, -292.406 )

[node name="s1-10" type="Position2D" parent="Stages/s2/positions"]
position = Vector2( 151.344, -106.145 )

[node name="HitBox" type="Area2D" parent="Stages/s2" groups=[
"hit",
]]
position = Vector2( 192.073, -7.83972 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Stages/s2/HitBox"]
polygon = PoolVector2Array( -138.825, 504.099, -160.423, 370.785, -91.9042, 367.061, -93.3937, -41.0732, -77.7534, -94.6968, -46.4729, -109.592, -40.5151, -429.099, 59.2842, -429.844, 91.3093, 107.881, 32.4723, 110.86, 36.196, 453.455, -62.1138, 444.518, -79.2437, 501.865 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Stages/s2/HitBox"]
polygon = PoolVector2Array( -422.694, -139.857, -397.669, -174.507, -443.869, -217.82, -401.519, -260.171, -322.593, -287.121, -127.203, -381.447, -273.505, -437.272, -405.369, -383.372, -471.782, -298.671, -472.744, -171.62 )

[node name="s1" type="Sprite" parent="Stages"]
position = Vector2( 7.55408, -73.0238 )
texture = ExtResource( 2 )

[node name="positions" type="Node2D" parent="Stages/s1"]

[node name="s1-1" type="Position2D" parent="Stages/s1/positions"]
position = Vector2( -10.4735, -285.72 )

[node name="s1-2" type="Position2D" parent="Stages/s1/positions"]
position = Vector2( 30.1449, -246.589 )

[node name="s1-3" type="Position2D" parent="Stages/s1/positions"]
position = Vector2( -22.7828, -190.416 )

[node name="s1-4" type="Position2D" parent="Stages/s1/positions"]
position = Vector2( 78.261, -228.058 )

[node name="s1-5" type="Position2D" parent="Stages/s1/positions"]
position = Vector2( 96.1935, -108.503 )

[node name="s1-6" type="Position2D" parent="Stages/s1/positions"]
position = Vector2( 41.5845, -179.923 )

[node name="s1-7" type="Position2D" parent="Stages/s1/positions"]
position = Vector2( 89.8551, -164.174 )

[node name="s1-8" type="Position2D" parent="Stages/s1/positions"]
position = Vector2( 4.65698, -218.165 )

[node name="s1-9" type="Position2D" parent="Stages/s1/positions"]
position = Vector2( 90.4736, -199.962 )

[node name="s1-10" type="Position2D" parent="Stages/s1/positions"]
position = Vector2( 40.1934, -276.793 )

[node name="HitBox" type="Area2D" parent="Stages/s1" groups=[
"hit",
]]
position = Vector2( 51.0129, -198.277 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Stages/s1/HitBox"]
polygon = PoolVector2Array( -11.8362, -14.5792, 1.85059, 29.7664, -106.002, 31.9563, -103.265, -5.27197, -72.606, -9.65186, -72.0586, -45.2379, -52.3495, -44.6903, -52.8969, -85.2036, -72.606, -83.5612, -64.9414, -102.723, -3.07654, -79.7288, 3.49304, -44.6903, 39.079, -60.0197, 50.576, -44.1428, 55.5033, 102.581, 36.889, 116.815, 18.8224, 65.8998, 22.6549, 1.29761 )

[node name="WeldTime" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="WeldTime2" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="report" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ShuttleTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Team1" type="Node2D" parent="."]

[node name="Particles2D" type="Particles2D" parent="Team1"]
amount = 25
explosiveness = 0.11
process_material = SubResource( 3 )

[node name="Corona" type="Sprite" parent="Team1"]
modulate = Color( 0.572549, 0.929412, 0.988235, 0.231373 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="Team2" type="Node2D" parent="."]

[node name="Particles2D" type="Particles2D" parent="Team2"]
amount = 25
explosiveness = 0.54
process_material = SubResource( 3 )

[node name="Corona" type="Sprite" parent="Team2"]
modulate = Color( 0.572549, 0.929412, 0.988235, 0.231373 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="Shuttles" type="Node2D" parent="."]
[connection signal="timeout" from="WeldTime" to="." method="_on_WeldTime_timeout"]
[connection signal="timeout" from="WeldTime2" to="." method="_on_WeldTime2_timeout"]
[connection signal="timeout" from="report" to="." method="_on_report_timeout"]
[connection signal="timeout" from="ShuttleTimer" to="." method="_on_ShuttleTimer_timeout"]
